changed findById method to findByName (now it possible to find person by first or full name) but it return first person if there are duplicates